// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statistics actions creates STATISTICS_DATA_REQUEST and ends with success 1`] = `
Array [
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
    "type": "STATISTICS_DATA_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "STATISTICS_DATA",
      "payload": Object {
        "id": "operatingsystem",
        "search": "/hosts?search=os_title=~VAL~",
        "title": "OS Distribution",
        "url": "statistics/operatingsystem",
      },
      "url": "statistics/operatingsystem",
    },
    "type": "API_GET",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "architecture",
      "search": "/hosts?search=facts.architecture=~VAL~",
      "title": "Architecture Distribution",
      "url": "statistics/architecture",
    },
    "type": "STATISTICS_DATA_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "STATISTICS_DATA",
      "payload": Object {
        "id": "architecture",
        "search": "/hosts?search=facts.architecture=~VAL~",
        "title": "Architecture Distribution",
        "url": "statistics/architecture",
      },
      "url": "statistics/architecture",
    },
    "type": "API_GET",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
    "response": Object {
      "data": Array [
        Array [
          "centOS 7.1",
          6,
        ],
      ],
      "id": "operatingsystem",
    },
    "type": "STATISTICS_DATA_SUCCESS",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "architecture",
      "search": "/hosts?search=facts.architecture=~VAL~",
      "title": "Architecture Distribution",
      "url": "statistics/architecture",
    },
    "response": Object {
      "data": Array [
        Array [
          "x86_64",
          6,
        ],
      ],
      "id": "architecture",
    },
    "type": "STATISTICS_DATA_SUCCESS",
  },
]
`;

exports[`statistics actions creates STATISTICS_DATA_REQUEST and then fails with 422 1`] = `
Array [
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
    "type": "STATISTICS_DATA_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "STATISTICS_DATA",
      "payload": Object {
        "id": "operatingsystem",
        "search": "/hosts?search=os_title=~VAL~",
        "title": "OS Distribution",
        "url": "statistics/operatingsystem",
      },
      "url": "statistics/operatingsystem",
    },
    "type": "API_GET",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "architecture",
      "search": "/hosts?search=facts.architecture=~VAL~",
      "title": "Architecture Distribution",
      "url": "statistics/architecture",
    },
    "type": "STATISTICS_DATA_REQUEST",
  },
  Object {
    "payload": Object {
      "key": "STATISTICS_DATA",
      "payload": Object {
        "id": "architecture",
        "search": "/hosts?search=facts.architecture=~VAL~",
        "title": "Architecture Distribution",
        "url": "statistics/architecture",
      },
      "url": "statistics/architecture",
    },
    "type": "API_GET",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
    "response": [Error: Request failed with status code 422],
    "type": "STATISTICS_DATA_FAILURE",
  },
  Object {
    "key": "STATISTICS_DATA",
    "payload": Object {
      "id": "architecture",
      "search": "/hosts?search=facts.architecture=~VAL~",
      "title": "Architecture Distribution",
      "url": "statistics/architecture",
    },
    "response": [Error: Request failed with status code 422],
    "type": "STATISTICS_DATA_FAILURE",
  },
]
`;
